--- a/style.css
+++ b/style.css
@@ -8,10 +8,6 @@ h1 {
   text-align: center;
 }
 
-figure {
-  text-align: center;
-}
-
 nav {
   text-align: center;
 }
@@ -20,3 +16,12 @@ nav a {
   padding: 0 10px 0 10px;
   background-color: grey;
 }
+
+figure {
+  text-align: center;
+}
+
+figcaption {
+  font-size: 0.5 rem;
+}
+
