Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -24,3 +24,9 @@ figure {
 figcaption {
   font-size: 0.5em;
 }
+
+#featured-property.p {
+  background-color: red;
+  width: 800px;
+  text-align: center;
+}
